# embassy-demo

./: Cargo.toml  openocd.cfg
.cargo/: config.toml
src/: main.rs
